# qxconfig

./: .gitignore  CLAUDE.md  README-build.md  README.md  build-qxconf.py  build.sh  pyproject.toml  run.sh
profile/: QX_Config.conf
qxconf/: __init__.py  builder.py  clash.py  cli.py  config.py  sample.conf  types.py
rules/: AI.list  AppleIntelligence.list  dandanbulu.conf
scripts/: CMCC.js  buding.conf  buding.js  caiyun.conf  cd-rail.conf  cmcc.conf  dandanvip.conf  dreamface.conf  dreamface.js  glados.conf  glados.js  new-api.conf  nicegram.conf  nodeseek.conf  nodeseek.js  notability.conf  notability.js  v2ex.conf  v2ex.js
tests/: test_builder.py  test_clash.py  test_config.py
