[project]
name = "qxconf"
version = "0.1.0"
description = "Turn a Quantumult X profile into a self-contained directory (localized remote rules + Clash-derived nodes)"
readme = "README-build.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "pyyaml>=6",
    "httpx>=0.27",
]

[project.scripts]
build-qxconf = "qxconf.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qxconf"]
